--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "demo-space-jelly-gear",
+  "name": "necommerce",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,11 +8,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.10",
+    "@cloudinary/url-gen": "^1.7.0",
+    "@turf/center": "^6.5.0",
+    "@turf/helpers": "^6.5.0",
+    "graphql": "^16.3.0",
+    "leaflet": "^1.8.0",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
-    "sass": "^1.49.7"
+    "react-leaflet": "^4.0.0",
+    "sass": "^1.49.7",
+    "use-snipcart": "^1.1.3"
   },
   "devDependencies": {
     "eslint": "8.9.0",
